--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -15,28 +15,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. 깃허브 레포지토리 코드 체크아웃
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      # 2. Docker Buildx 설정 (멀티 플랫폼 빌드 지원)
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      # 3. Docker Hub 로그인
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # 4. Docker 이미지 빌드 및 Docker Hub에 푸시 (커밋 SHA를 태그로 사용)
-      - name: Build and Push Docker Image
-        id: build-image
-        run: |
-          IMAGE=${{ secrets.DOCKER_REPO }}/shortorial-be:${{ github.sha }}
-          docker buildx build -t $IMAGE --push back/sleep
-
       # 5. AWS OIDC로 인증 (추정할 IAM Role과 GitHub 연결)
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -57,7 +35,7 @@ jobs:
       # 6-4. 값이 치환된 be-task-definition-base.json 파일을 be-task-definition.json 파일로 생성
       - name: Build ECS task definition with jq
         run: |
-          jq --arg img "${{ secrets.DOCKER_REPO }}/shortorial-be:${{ github.sha }}" \
+          jq --arg img "${{ secrets.DOCKER_REPO }}/shortorial-be:latest" \
             --arg AWS_ACCOUNT_ID "${{ secrets.AWS_ACCOUNT_ID }}" \
             --arg MYSQL_URL "${{ secrets.MYSQL_URL }}" \
             --arg MYSQL_USER "${{ secrets.MYSQL_USER }}" \
@@ -67,7 +45,7 @@ jobs:
             --arg ACCESS_KEY "${{ secrets.ACCESS_KEY }}" \
             --arg SECRET_KEY "${{ secrets.SECRET_KEY }}" \
             --arg VITE_HOME_URL "${{ secrets.VITE_HOME_URL }}" \
-            --arg SPRING_PROFILE "prod"
+            --arg SPRING_PROFILE "prod" \
           '
           .family = "shortorial-be-task" |
           .executionRoleArn = "arn:aws:iam::\($AWS_ACCOUNT_ID):role/ecsTaskExecutionRole" |
