--- a/.github/workflows/backend-test-cd.yml
+++ b/.github/workflows/backend-test-cd.yml
@@ -30,12 +30,11 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # 4. Docker 이미지 빌드 및 Docker Hub에 푸시 (커밋 SHA를 태그로 사용)
+      # 4. Docker 이미지 빌드 및 Docker Hub에 푸시 (커밋SHA, latest 태그 1개씩)
       - name: Build and Push Docker Image
-        id: build-image
         run: |
-          IMAGE=${{ secrets.DOCKER_REPO }}/shortorial-be:${{ github.sha }}
-          docker buildx build -t $IMAGE --push back/sleep
+          IMAGE=${{ secrets.DOCKER_REPO }}/shortorial-be
+          docker buildx build --push -t $IMAGE:${{ github.sha }} -t $IMAGE:latest back/sleep
 
       # 5. AWS OIDC로 인증 (추정할 IAM Role과 GitHub 연결)
       - name: Configure AWS credentials
